--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="/static/style.css">
-    <title>{{ if .EntryTitle }}{{ .EntryTitle }} - {{ end }}{{ .Title }}</title>
+    <title>{{ if ne .EntryTitle "/" }}{{ .EntryTitle }} - {{ end }}{{ .Title }}</title>
 </head>
 <body>
 {{ if .Entry -}}
