--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
 </div>
 {{- else -}}
 <div class="home-main">
-    <h1>{{ .Title }}</h1>
+    <div class="about">
+        <h1>{{ .Title }}</h1>
+        {{ if .SiteDescription }}<div class="description">{{ .SiteDescription }}</div>{{ end }}
+    </div>
     <input type="text" id="search-box" placeholder="search">
     <div id="search-results" class="hidden"></div>
     <div class="toc" id="toc">
